--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
       font-family: "Roboto", sans-serif;
     }
   </style>
-  <title>Fiverr</title>
+  <title>React App</title>
 </head>
 
 <body>
